# runs_flask_app

./: .gitignore  README.md  app.py  pyproject.toml
templates/: current_month.html  home.html  layout.html  records.html  year.html
