[tool.poetry]
name = "runs_flask_app"
version = "0.1.0"
description = "Flask App for Running"
authors = ["Arun Kr. Khattri <arunkhattri@outlook.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
pandas = "^1.4.2"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
plotly = "^5.8.0"
python-dotenv = "^0.20.0"
watchdog = "^2.1.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pyflakes = "^2.4.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
